# actions

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
.ai-rulez/: config.toml  config.yaml
.github/: dependabot.yml
build-and-cache-binding/: action.yml
build-homebrew-bottle/: action.yml
build-java-jars/: action.yml
build-node-napi/: action.yml
build-php-extension/: action.yml
build-python-wheels/: action.yml
build-ruby-gem/: action.yml
build-rust-cli/: action.yml
build-rust-ffi/: action.yml
build-wasm-package/: action.yml
check-registry/: action.yml
cleanup-rust-cache/: action.yml
free-disk-space-linux/: action.yml
generate-elixir-checksums/: action.yml
install-alef/: action.yml
install-task/: action.yml
install-wasi-sdk/: action.yml
package-php-pie/: README.md  action.yml
prepare-release-metadata/: action.yml
publish-crates/: action.yml
publish-github-release/: action.yml
publish-gleam/: README.md
publish-hex/: action.yml
publish-homebrew/: action.yml
publish-maven/: action.yml
publish-maven-gradle/: README.md  action.yml
publish-npm/: action.yml
publish-nuget/: action.yml
publish-packagist/: action.yml
publish-pub/: README.md
publish-pypi/: action.yml
publish-rubygems/: action.yml
publish-swift/: README.md  action.yml
publish-zig/: README.md  action.yml
retag-for-republish/: action.yml
setup-go-cgo-env/: action.yml
setup-maven/: action.yml
setup-node-workspace/: action.yml
setup-openssl/: action.yml
setup-php/: action.yml
setup-python-env/: action.yml
(+108 files in other folders)
